fix endless run, add test, parser+, view+, db+